# spln-2122

./: ABM_807.xml  README.md
Aulas/Aula3/: NF.csv  NM.csv  NomesFeminino.csv  NomesMasculino.csv  diario_de_bordo  filtro  filtroNomes.py  filtroUnix copy.py  filtroUnix.py
Aulas/aula1/: diario_bordo.txt
Aulas/aula10/: atlas.py
Aulas/aula10/wsextract/: pyproject.toml  wsextract.py
Aulas/aula11/: aula11.py  relacoes.py  result_conll
Aulas/aula2/: FAA
Aulas/aula4/: medicina.py
Aulas/aula5/: medicina.py
Aulas/aula6/: ex1.ipynb  ex_3.ipynb
Aulas/aula8/: Makefile  main.py  preprocess.py
Aulas/aula9/: aborto.txt  noticia.txt  resumo.txt  resumo1.txt  script.py
Slides/: Modulos.md
TMX/: _harryPotter-pedra_filosofal.tmx
TPs/: TP2.md
