[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "wsextract"
authors = [{name = "[REDACTED]", email = "[REDACTED]"}]
dynamic = ["version", "description"]
dependencies = ["bs4", "requests", "lxml"]

[project.scripts]
wslinks = "wsextract:main_links"
wstables = "wsextract:main_tables"
